<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">GOAC</string>
    <string name="app_name_full">Globus Online Android Client</string>
    <string name="action_settings">Settings</string>
    <string name="logout_text">Log out</string>
    <string name="logo_description">Logo of Globus Online</string>
    <string name="log_in_string">Sign in</string>
    <string name="log_in_prompt">Use Your GlobusOnline login</string>
    <string name="sign_up_string">Sign up</string>
    <string name="username_hint">Username</string>
    <string name="password_hint">Password</string>
    <string name="offline_warning">Please check your internet connection</string>
    <string name="no_username_warning">Please type your username</string>
    <string name="no_password_warning">Please type your password</string>
    <string name="no_username_and_password_warning">Please type your username and password</string>
    <string name="login_fail_warning">Wrong username or password</string>
    <string name="title_activity_start_transfer">GOAC-Start Transfer</string>
    <string name="login_successfull">You have logged in successfully</string>
    <string name="endpoint_list_1">Endpoint a</string>
    <string name="endpoint_list_2"><b>Endpoint b</b></string>
    <string name="select_endpoint_prompt">Select endpoint</string>
    <string name="loading_endpoints">Loading endpoints...</string>
    <string name="update_label_name_title">Update Label</string>
    <string name="logout_instructions">You can log out from the menu</string>
    <string name="title_activity_settings">GOAC-Settings Activity</string>
    <string name="hello_world">Hello world!</string>
    <string name="log_out_title">Logging out</string>
    <string name="log_out_question">Are you sure you want to log out?</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="ok">OK</string>
    <string name="settings_title">Settings</string>
    <string name="active_endpoints_toggle">Show active endpoints only</string>
    <string name="all_endpoints_toggle">Show all endpoints</string>
    <string name="preferences_name">org.globus.globustransfer.preferencesA</string>
    <string name="remember_me_text">Remember me</string>
    <string name="title_activity_endpoint">Select Endpoint</string>
    <string name="back">^</string>
    <string name="root_folder_warning">This is the root folder. You can not go further back!</string>
    <string name="delete_file">*</string>
    <string name="no_endpoint_selected_warning">No endpoint selected</string>
    <string name="invalid_name_warning">The label should be non-empty and contatin only letters, numbers and spaces</string>
    <string name="file_name_placeholder">Filename</string>
    <string name="file_size_placeholder">0b</string>
    <string name="task_performance_placeholder">-</string>
    <string name="image_description">file or folder icon</string>
    <string name="image_description1">delete or transfer</string>
    <string name="folder_name">Folder name</string>
    <string name="select_deletion_name_title">Delete Files</string>
    <string name="select_transfer_name_title">Transfer Files</string>
    <string name="deletion_name">Label</string>
    <string name="select_folder_name_title">Create Folder</string>
    <string name="no_folder_title_warning">Please type a folder name</string>
    <string name="no_files_selected_warning">No files selected</string>
    <string name="error">Error occurred</string>
    <string name="refresh">refresh button</string>
    <string name="path_placeholder">path</string>
    <string name="folder">Folder&#160;</string>
    <string name="A_to_B_transfer">V</string>
    <string name="B_to_A_transfer">^</string>
    <string name="no_starting_endpoint_selected_warning">No starting endpoint selected</string>
    <string name="no_destination_endpoint_selected_warning">No destination endpoint selected</string>
    <string name="task_monitoring">Task monitoring</string>
    <string name="no_escape_characters_allowed_warning">Only letters, numbers and spaces are allowed</string>
    <string name="show_hidden_files_toggle">Show hidden files</string>
    <string name="hide_hidden_files_toggle">Do not show hidden files</string>
    <string name="deletions_toggle">Show all tasks</string>
    <string name="transfers_toggle">Show transfers only</string>
    <string name="title_activity_menu">GOAC-Menu</string>
    <string name="reload_endpoints">Reload Endpoints</string>
    <string name="title_activity_monitor">GOAC-Monitor Transfers</string>
    <string name="task_id_placeholder">Task id</string>
    <string name="progress_placeholder">2/2</string>
    <string name="status">Status</string>
    <string name="label">Label</string>
    <string name="type">Type</string>
    <string name="performance_mb">MB/s</string>
    <string name="progress">Progress</string>
    <string name="loading_tasks">Loading tasks...</string>
    <string name="number_of_tasks">Number of tasks to show</string>
    <string name="ten">10</string>
    <string name="twenty">20</string>
    <string name="fifty">50</string>
    <string name="hundred">100</string>
    <string name="status_of_tasks">Show tasks with status</string>
    <string name="active">active</string>
    <string name="inactive">inactive</string>
    <string name="succeeded">succeeded</string>
    <string name="failed">failed</string>
    <string name="transfer_details">Transfer Details</string>
    <string name="label_">Label&#160;</string>
    <string name="dash">-</string>
    <string name="taskid_">Task ID&#160;</string>
    <string name="status_">Status&#160;</string>
    <string name="origin_">Origin&#160;</string>
    <string name="destination_">Destination&#160;</string>
    <string name="request_">Request Time&#160;</string>
    <string name="deadline_">Deadline&#160;</string>
    <string name="completion_">Completion Time&#160;</string>
    <string name="total_time_">Total Time&#160;</string>
    <string name="task_stats">Task Statistics</string>
    <string name="performance_stats">Performance Statistics</string>
    <string name="total_size_">Total Size&#160;</string>
    <string name="transfer_rate_">Transfer Rate&#160;</string>
    <string name="pending_">Pending&#160;</string>
    <string name="time_info">Time Information</string>
    <string name="performance_info">Performance Information</string>
    <string name="succeeded_">Succeeded&#160;</string>
    <string name="cancelled_">Cancelled&#160;</string>
    <string name="expired_">Expired&#160;</string>
    <string name="failed_">Failed&#160;</string>
    <string name="retrying_">Retrying&#160;</string>
    <string name="skipped_">Skipped&#160;</string>
    <string name="cancel">Cancel</string>
    <string name="type_">Type</string>
    <string name="cancel_task_title">Cancel Task</string>
    <string name="cancel_task_question">Are you sure you want to cancel this task?</string>
    <string name="cancel_request_submitted">Cancel Request Submitted</string>
    <string name="new_folder_request_submitted">Folder Creation Request Submitted</string>
    <string name="delete_request_submitted">Delete Request Submitted</string>
    <string name="transfer_request_submitted">Transfer Request Submitted</string>
    <string name="label_update_request_submitted">Label Update Request Submitted</string>
    <string name="insert_label">&#60;Put Label&#62;</string>
    <string name="activate_endpoint">Activate Endpoint</string>
    <string name="requirement_placehorder_1">Requirement 1</string>
    <string name="oauth">This endpoint requires OAuth activation which is not currently available</string>
    <string name="fields_not_filled_warning">All fields with * must be filled before proceedding</string>
    <string name="authenticate">Authenticate</string>
    <string name="set_path_title">Set path</string>
    <string name="path_name">Path</string>
</resources>