<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="220dp"
    android:layout_height="200dp"
	android:background="@android:color/darker_gray"
	android:layout_gravity="center"
	android:orientation="vertical"
 android:paddingLeft="10dp"
	android:paddingRight="10dp"
    >
  
    <TextView 
        android:id="@+id/settings_title_id"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/settings_title" 
        android:textSize="20sp"
          android:layout_alignParentLeft="true"    
        android:textColor="@android:color/white"
        />
    <View
    android:id="@+id/top_line"
    android:layout_width="fill_parent"
    android:layout_height="1dp"
    android:background="@android:color/white"
    android:layout_marginTop="5dp"
    android:layout_below="@id/settings_title_id"
   
    />


	<ToggleButton
	    android:id="@+id/toggleButton1"
	    android:layout_width="200dp"
	    android:layout_height="wrap_content"
		android:layout_below="@id/top_line"
		android:layout_marginTop="10dp"
		android:layout_centerHorizontal="true"
	   	android:textOn="@string/active_endpoints_toggle"
	    android:textOff="@string/all_endpoints_toggle" />

		<ToggleButton
	    android:id="@+id/toggleButton2"
	    android:layout_width="200dp"
	    android:layout_height="wrap_content"
		android:layout_centerHorizontal="true"
		android:layout_below="@id/toggleButton1"
	   	android:textOn="@string/show_hidden_files_toggle"
	    android:textOff="@string/hide_hidden_files_toggle" />
	  	  

	  <View
    android:layout_width="fill_parent"
    android:layout_height="1dp"
    android:background="@android:color/white"
    android:layout_marginBottom="5dp"
    android:layout_above="@+id/ok_button"
    />
		<Button
	    android:id="@id/ok_button"
	    android:layout_width="wrap_content"
	    android:layout_height="wrap_content"
	    android:layout_gravity="center"
	    android:paddingLeft="20dp"
	    android:paddingRight="20dp"
	    android:text="@string/ok" 
	    android:layout_centerHorizontal="true"
	    android:layout_alignParentBottom="true"
	     />

</RelativeLayout>