<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="30dp"
    android:background="@color/list_view_color"
    android:orientation="horizontal" >

    <ImageView
        android:id="@+id/task_status"
        android:layout_width="25dp"
        android:layout_height="25dp"
        android:layout_alignParentStart="true"
        android:layout_centerVertical="true"
        android:layout_marginRight="20dp"
        android:contentDescription="@string/image_description"
        android:src="@drawable/completed" />

    <TextView
        android:id="@+id/task_id"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerVertical="true"
        android:layout_toLeftOf="@+id/task_type"
        android:layout_toRightOf="@id/task_status"
        android:text="@string/task_id_placeholder"
        android:textColor="@color/text_color"
        android:textSize="13sp" />
	
    
    <ImageView
        android:id="@id/task_type"
        android:layout_width="25dp"
        android:layout_height="25dp"
        android:layout_centerVertical="true"
        android:layout_marginRight="75dp"
        android:layout_alignParentRight="true"
        android:contentDescription="@string/image_description1"
        android:src="@drawable/type_transfer" />

    <TextView
        android:id="@+id/progress"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentRight="true"
        android:layout_centerVertical="true"
        android:layout_marginLeft="5dp"
        android:text="@string/progress_placeholder"
        android:textColor="@android:color/darker_gray"
        android:textSize="15sp"
        android:textStyle="italic" />

</RelativeLayout>